# GenStix

./: .config.yml  .flake8  .gitignore  CONTRIBUTING.md  GenSTIX.yml  README.md  pyproject.toml  requirements
gen_stix/: __main__.py
gen_stix/constraints/gen_stix/cdts/external_reference/: external_reference_stix21_constraint_capec_id.constraint  external_reference_stix21_constraint_description.constraint  external_reference_stix21_constraint_external_id.constraint  external_reference_stix21_constraint_hashes.constraint  external_reference_stix21_constraint_source_name.constraint  external_reference_stix21_constraint_url.constraint  external_reference_stix21_optional_fields.constraint  external_reference_stix21_required_source_name.constraint
gen_stix/constraints/gen_stix/cdts/kill_chain_phase/: kill_chain_phase_check_unicity_by_phase_name_kill_chain_name.constraint  kill_chain_phase_stix21_constraint_kill_chain_name.constraint  kill_chain_phase_stix21_constraint_phase_name.constraint  kill_chain_phase_stix21_required_kill_chain_name.constraint  kill_chain_phase_stix21_required_phase_name.constraint
gen_stix/constraints/gen_stix/sdos/attack_pattern/: attack_pattern_check_unicity_by_type_name.constraint  attack_pattern_stix21_constraint_aliases.constraint  attack_pattern_stix21_constraint_description.constraint  attack_pattern_stix21_constraint_external_references.constraint  attack_pattern_stix21_constraint_kill_chain_phases.constraint  attack_pattern_stix21_constraint_name.constraint  attack_pattern_stix21_constraint_type.constraint  (+3 more)
gen_stix/features/tui/projects/: access_new_projects_path.feature  access_project.feature  access_projects_path.feature  access_tui.feature  create_project.feature  delete_project.feature
gen_stix/src/: __init__.py
gen_stix/src/app/adapter/: __init__.py
gen_stix/src/app/tui/: launch_tui.py
gen_stix/src/gen_stix/gateway/: abstract_gateway.py
gen_stix/src/utils/: container.py  singleton.py
gen_stix/tests/: factory.py
gen_stix/tests/features/tui/: test_acces_projects_folder.py
(+197 files in other folders)
